<resources>
    <string name="app_name">AirBattle</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="input_hint">Please input Username and Password</string>
    <string name="signup_hint">Please sign-up an account</string>
    <string name="password_error">Password error!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signin_btn">Sign in</string>
    <string name="signup_btn">Sign up</string>
    <string name="start_btn">Start</string>
    <string name="diff_normal">Difficulty: Normal</string>
    <string name="diff_hard">Difficulty: Hard</string>
    <string name="rank_btn">Ranking</string>
    <string name="about_btn">About</string>
    <string name="setting_btn">Settings</string>
    <string name="logout_btn">Log Out</string>
    <string name="exit_btn">Exit</string>
    <string name="about_title">About AirBattle</string>
    <string name="about_msg">- Control the movement with your finger.
        \n- Aircraft will shoot automatically.
        \n- Pick up floating props for enhancement.
        \n- See your best record in ranking.
        \n- Enjoy the game!.
    </string>
    <string name="pause_button">Pause</string>
    <string name="title_activity_rank_navi">rankNaviActivity</string>
    <string name="title_normal">Normal Ranking</string>
    <string name="title_hard">Hard Ranking</string>
    <string name="title_notifications">Notifications</string> <!-- Add this line -->

</resources>